Results page added

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -109,7 +109,7 @@
           <label for="max" style="padding-left: 10px;">to</label>
           <input type="text" id="max" name="max">
         </div>
-          <input class="search" type="submit" value="Search">
+          <input class="search" type="button" onclick="window.location.href='results.html';" value="Search">
       </form>
     </div>
   </body>
