--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -15,6 +15,23 @@
   </head>
 
   <style>
+    .nav {
+      width: 50%;
+      margin: 0 auto;
+    }
+    ul {
+      background-color: rgb(204,164,164);
+      border-style: solid;
+      list-style-type: none;
+    }
+    li {
+      display: inline;
+    }
+    a {
+      color: black;
+      font-weight: bold;
+      text-decoration: none;
+    }
     body {
       background-color: rgb(253,204,204);
       font-family: Arial;
@@ -22,6 +39,7 @@
     }
     .form {
       background-color: rgb(145,136,202);
+      border-style: solid;
       width: 50%;
       margin: 0 auto;
       padding: 10px 20px 20px 20px;
@@ -47,7 +65,16 @@
   </style>
 
   <body>
-    <h1>Booked</h1>
+    <div class="nav">
+      <ul>
+        <li><a href="index.html">Home |</a></li>
+        <li><a href="">Sign In |</a></li>
+        <li><a href="">About |</a></li>
+        <li><a href="">Preferences |</a></li>
+        <li><a href="">Help</a></li>
+      </ul>
+    </div>
+    <h1 style="color: black;">Booked</h1>
     <h3 style="color: rgb(139,118,118);">Finding books from local, independent bookstores made easy!</h3>
     <div class="form">
       <h3 style="color: white;">Booked Search Form</h3>
