Landing pages added

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -68,10 +68,10 @@
     <div class="nav">
       <ul>
         <li><a href="index.html">Home |</a></li>
-        <li><a href="">Sign In |</a></li>
-        <li><a href="">About |</a></li>
-        <li><a href="">Preferences |</a></li>
-        <li><a href="">Help</a></li>
+        <li><a href="signin.html">Sign In |</a></li>
+        <li><a href="about.html">About |</a></li>
+        <li><a href="preferences.html">Preferences |</a></li>
+        <li><a href="help.html">Help</a></li>
       </ul>
     </div>
     <h1 style="color: black;">Booked</h1>
