--- a/frontend/public/results.html
+++ b/frontend/public/results.html
@@ -15,7 +15,7 @@
   </head>
 
   <style>
-    .nav {
+    nav {
       width: 50%;
       margin: 0 auto;
     }
@@ -45,16 +45,17 @@
     }
   </style>
 
+<nav>
+  <ul>
+    <li><a href="index.html">Home |</a></li>
+    <li><a href="">Sign In |</a></li>
+    <li><a href="">About |</a></li>
+    <li><a href="">Preferences |</a></li>
+    <li><a href="">Help</a></li>
+  </ul>
+</nav>
+
   <body>
-    <div class="nav">
-        <ul>
-          <li><a href="index.html">Home |</a></li>
-          <li><a href="">Sign In |</a></li>
-          <li><a href="">About |</a></li>
-          <li><a href="">Preferences |</a></li>
-          <li><a href="">Help</a></li>
-        </ul>
-      </div>
     <h1 style="color: black;">Booked</h1>
     <h3 style="color: rgb(139,118,118);">Finding books from local, independent bookstores made easy!</h3>
     <button onclick="window.location.href='index.html';">Back to Home</button>
