--- a/frontend/public/signin.html
+++ b/frontend/public/signin.html
@@ -15,7 +15,7 @@
   </head>
 
   <style>
-    .nav {
+    nav {
       width: 50%;
       margin: 0 auto;
     }
@@ -39,16 +39,17 @@
     }
   </style>
 
+<nav>
+  <ul>
+    <li><a href="index.html">Home |</a></li>
+    <li><a href="signin.html">Sign In |</a></li>
+    <li><a href="about.html">About |</a></li>
+    <li><a href="preferences.html">Preferences |</a></li>
+    <li><a href="help.html">Help</a></li>
+  </ul>
+</nav>
+
   <body>
-    <div class="nav">
-      <ul>
-        <li><a href="index.html">Home |</a></li>
-        <li><a href="signin.html">Sign In |</a></li>
-        <li><a href="about.html">About |</a></li>
-        <li><a href="preferences.html">Preferences |</a></li>
-        <li><a href="help.html">Help</a></li>
-      </ul>
-    </div>
     <h1 style="color: black;">Booked</h1>
     <h3 style="color: rgb(139,118,118);">Finding books from local, independent bookstores made easy!</h3>
     </div>
