--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -30,6 +30,9 @@
     <title>React App</title>
   </head>
   <body>
+    <div class="banner">
+
+ 
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
@@ -42,5 +45,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+  </div>
   </body>
 </html>
